--- a/package.json
+++ b/package.json
@@ -31,12 +31,15 @@
     "babel-preset-vue-app": "^1.3.1",
     "http-proxy-middleware": "^0.17.4",
     "koa": "^2.5.0",
+    "lib-flexible": "^0.3.2",
+    "px2rem-loader": "^0.1.9",
     "semver": "^5.5.0",
     "stoppable": "^1.0.4",
     "superkoa": "^1.0.3",
     "supertest": "^3.0.0",
     "timeago.js": "^4.0.0-beta.2",
-    "vant": "^2.2.1"
+    "vant": "^2.2.1",
+    "webpack-px2rem-loader": "^1.0.2"
   },
   "engines": {
     "node": ">= 6.9.0",
