--- a/package.json
+++ b/package.json
@@ -37,8 +37,8 @@
     "stoppable": "^1.0.4",
     "superkoa": "^1.0.3",
     "supertest": "^3.0.0",
-    "timeago.js": "^4.0.0-beta.2",
-    "vant": "^2.2.1"
+    "vant": "^2.2.1",
+    "vue-timeago": "^5.1.2"
   },
   "engines": {
     "node": ">= 6.9.0",
